--- a/src/application/HistoryPage.fxml
+++ b/src/application/HistoryPage.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -26,6 +27,12 @@
             <Button fx:id="button_exit" layoutX="110.0" layoutY="400.0" mnemonicParsing="false" onAction="#onExitButtonClick" text="終了">
                <font>
                   <Font name="System Bold" size="24.0" />
+               </font>
+            </Button>
+            <ChoiceBox fx:id="choicebox_studentID" layoutX="70.0" layoutY="116.0" prefHeight="35.0" prefWidth="160.0" />
+            <Button layoutX="116.0" layoutY="199.0" mnemonicParsing="false" text="更新">
+               <font>
+                  <Font name="System Bold" size="20.0" />
                </font>
             </Button>
          </children>
