--- a/bin/application/HistoryPage.fxml
+++ b/bin/application/HistoryPage.fxml
@@ -29,8 +29,8 @@
                   <Font name="System Bold" size="24.0" />
                </font>
             </Button>
-            <ChoiceBox fx:id="choicebox_studentID" layoutX="70.0" layoutY="116.0" prefHeight="35.0" prefWidth="160.0" />
-            <Button layoutX="116.0" layoutY="199.0" mnemonicParsing="false" text="更新">
+            <ChoiceBox fx:id="choicebox_studentID" layoutX="75.0" layoutY="117.0" prefHeight="35.0" prefWidth="150.0" />
+            <Button layoutX="116.0" layoutY="199.0" mnemonicParsing="false" onAction="#onReloadButtonClick" text="更新">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
